# python-with-rust-test

./: Cargo.toml  Makefile  README.md  test.py
src/: lib.rs
src/pessoa/: mod.rs
