[package]
name = "rust-with-python-test"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type=["cdylib"]

[dependencies]
libc = "0.2.139"
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.93"
